Update project styles to prevent horizontal scroll

--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -3,7 +3,7 @@ $break2: 768px;
 $break3: 425px;
 
 .container {
-  overflow: auto;
+  overflow: hidden;
 }
 
 .thumb {
